# Casei

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
casei/: __init__.py  _version.py
casei.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
casei/enrichment/: __init__.py
casei/models/: __init__.py
casei/plotting/: __init__.py  _core.py  interaction_drivers.py  spatial_edges.py
casei/tools/: __init__.py  _analysis.py  _preprocessing.py  _training.py
tests/: test_casei.py
